Refactor CI/CD pipeline: streamline jobs, remove redundant stages, and enhance environment variable management

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD to ECS Fargate
+name: CI/CD Pipeline
 
 on:
   push:
@@ -9,36 +9,15 @@ on:
 env:
   AWS_REGION: us-east-1
   ECR_REPOSITORY: public.ecr.aws/m9g6f1m3/fintrax
-  ECS_CLUSTER: fintr-cluster
 
 jobs:
-  source:
-    name: Source Stage
+  test:
+    name: Run Tests
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-  scan:
-    name: Code Scanning Stage
-    runs-on: ubuntu-latest
-    needs: source
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Run Trivy (source scan only)
-        uses: aquasecurity/trivy-action@0.19.0
-        with:
-          scan-type: fs
-          severity: HIGH,CRITICAL
-          ignore-unfixed: true
-          format: table
-
-  build:
-    name: Build Stage
-    runs-on: ubuntu-latest
-    needs: scan
+    defaults:
+      run:
+        working-directory: ./fintrax-app
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -48,39 +27,60 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
+          cache-dependency-path: 'fintrax-app/package-lock.json'
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Build app
+      - name: Create .env file for testing
+        run: |
+          echo "Creating .env for testing..."
+          cat > .env.local << EOF
+          # Application Configuration
+          NEXT_PUBLIC_APP_URL=${{ secrets.NEXT_PUBLIC_APP_URL }}
+          
+          # Database Configuration
+          DATABASE_URL=${{ secrets.DATABASE_URL }}
+          
+          # Clerk Authentication Configuration
+          NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
+          CLERK_SECRET_KEY=${{ secrets.CLERK_SECRET_KEY }}
+          CLERK_PUBLISHABLE_KEY=${{ secrets.CLERK_PUBLISHABLE_KEY }}
+          
+          # Environment-specific configuration
+          NODE_ENV=development
+          NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+          NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+          EOF
+          echo "✅ .env created for testing"
+
+      - name: Run linting
+        run: npm run lint
+
+      - name: Run type checking
         run: npm run build
 
+      - name: Run tests (if available)
+        run: |
+          if npm run | grep -q "test"; then
+            npm test
+          else
+            echo "No tests configured"
+          fi
 
-  test:
-    name: Test Stage
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests with coverage
-        run: npm test -- --coverage
-
-  deploy:
-    name: Deploy Stage
+  build-and-push:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: test
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/staging'
+    defaults:
+      run:
+        working-directory: fintrax-app
+
+    outputs:
+      image-uri: ${{ steps.build-image.outputs.image-uri }}
+      environment: ${{ steps.set-env.outputs.environment }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -93,62 +93,102 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR Public
-        run: echo "No ECR login needed for public repo"
+        id: login-ecr
+        run: |
+          aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
 
-      - name: Set environment & tag
+      - name: Create .env file
+        run: |
+          echo "Creating .env for CI/CD build..."
+          cat > .env.local << EOF
+          # Application Configuration
+          NEXT_PUBLIC_APP_URL=${{ secrets.NEXT_PUBLIC_APP_URL }}
+          
+          # Database Configuration
+          DATABASE_URL=${{ secrets.DATABASE_URL }}
+          
+          # Clerk Authentication Configuration
+          NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
+          CLERK_SECRET_KEY=${{ secrets.CLERK_SECRET_KEY }}
+          CLERK_PUBLISHABLE_KEY=${{ secrets.CLERK_PUBLISHABLE_KEY }}
+          
+          # Environment-specific configuration
+          NODE_ENV=development
+          NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+          NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+          EOF
+          echo "✅ .env created successfully"
+
+      - name: Set environment and image tag
         id: set-env
         run: |
-          case "${GITHUB_REF_NAME}" in
-            main)    echo "tag=latest"  >> $GITHUB_OUTPUT; echo "env=prod"    >> $GITHUB_OUTPUT ;;
-            develop) echo "tag=develop" >> $GITHUB_OUTPUT; echo "env=dev"     >> $GITHUB_OUTPUT ;;
-            staging) echo "tag=staging" >> $GITHUB_OUTPUT; echo "env=staging" >> $GITHUB_OUTPUT ;;
-          esac
+          if [[ $GITHUB_REF == 'refs/heads/main' ]]; then
+            echo "tag=latest" >> $GITHUB_OUTPUT
+            echo "environment=prod" >> $GITHUB_OUTPUT
+          elif [[ $GITHUB_REF == 'refs/heads/develop' ]]; then
+            echo "tag=develop" >> $GITHUB_OUTPUT
+            echo "environment=dev" >> $GITHUB_OUTPUT
+          elif [[ $GITHUB_REF == 'refs/heads/staging' ]]; then
+            echo "tag=staging" >> $GITHUB_OUTPUT
+            echo "environment=staging" >> $GITHUB_OUTPUT
+          fi
 
-      - name: Build, tag, and push Docker image to Public ECR
+      - name: Build, tag, and push image to Amazon ECR
+        id: build-image
         env:
-          TAG: ${{ steps.set-env.outputs.tag }}
+          IMAGE_TAG: ${{ steps.set-env.outputs.tag }}
         run: |
-          IMAGE_URI="$ECR_REPOSITORY:$TAG"
-          docker build -t "$IMAGE_URI" .
-          docker push "$IMAGE_URI"
-          echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
+          # Build and push Docker image to existing ECR registry
+          IMAGE_URI=$ECR_REPOSITORY:$IMAGE_TAG
+          docker build -f Dockerfile -t $IMAGE_URI .
+          docker push $IMAGE_URI
+          
+          echo "Image pushed to $IMAGE_URI"
+          echo "image-uri=$IMAGE_URI" >> $GITHUB_OUTPUT
 
-      - name: Update ECS Service with new image
+  deploy:
+    name: Deploy to ECS
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/staging'
+    defaults:
+      run:
+        working-directory: fintrax-app
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Deploy to ECS Fargate
         env:
-          ENVIRONMENT: ${{ steps.set-env.outputs.env }}
-          IMAGE_URI: ${{ env.IMAGE_URI }}
+          ENVIRONMENT: ${{ needs.build-and-push.outputs.environment }}
+          IMAGE_URI: ${{ needs.build-and-push.outputs.image-uri }}
         run: |
-          SERVICE_NAME="fintr-$ENVIRONMENT-svc"
+          echo "🚀 Deploying to $ENVIRONMENT environment"
+          echo "📦 Image URI: $IMAGE_URI"
+          
+          # Run deployment script
+          ./infrastructure/deploy.sh $ENVIRONMENT $IMAGE_URI
 
-          # Get current task definition
-          TASK_DEF_ARN=$(aws ecs describe-services \
-            --cluster $ECS_CLUSTER \
-            --services $SERVICE_NAME \
-            --query "services[0].taskDefinition" \
+      - name: Get deployment URL
+        env:
+          ENVIRONMENT: ${{ needs.build-and-push.outputs.environment }}
+        run: |
+          STACK_NAME="fintr-$ENVIRONMENT"
+          LB_DNS=$(aws cloudformation describe-stacks \
+            --stack-name "$STACK_NAME" \
+            --query 'Stacks[0].Outputs[?OutputKey==`LoadBalancerDNS`].OutputValue' \
             --output text)
-
-          # Get task definition JSON
-          aws ecs describe-task-definition \
-            --task-definition "$TASK_DEF_ARN" \
-            --query taskDefinition > taskdef.json
-
-          # Remove unnecessary fields
-          jq 'del(.status,.revision,.taskDefinitionArn,.requiresAttributes,.compatibilities,.registeredAt,.registeredBy)' taskdef.json > taskdef-stripped.json
-
-          # Update image
-          jq --arg IMG "$IMAGE_URI" '.containerDefinitions[0].image=$IMG' taskdef-stripped.json > new-taskdef.json
-
-          # Register new task definition revision
-          NEW_REVISION=$(aws ecs register-task-definition \
-            --cli-input-json file://new-taskdef.json \
-            --query "taskDefinition.taskDefinitionArn" \
-            --output text)
-
-          # Update ECS service to new task definition
-          aws ecs update-service \
-            --cluster $ECS_CLUSTER \
-            --service $SERVICE_NAME \
-            --task-definition "$NEW_REVISION" \
-            --force-new-deployment
-
-          echo "✅ Deployed $IMAGE_URI to $SERVICE_NAME"
+          
+          echo "🌐 Application deployed to: http://$LB_DNS"
+          echo "### 🚀 Deployment Successful!" >> $GITHUB_STEP_SUMMARY
+          echo "**Environment:** $ENVIRONMENT" >> $GITHUB_STEP_SUMMARY
+          echo "**Application URL:** http://$LB_DNS" >> $GITHUB_STEP_SUMMARY
+          echo "**Image:** ${{ needs.build-and-push.outputs.image-uri }}" >> $GITHUB_STEP_SUMMARY
