--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -147,18 +147,18 @@ jobs:
           echo "image-uri=$IMAGE_URI" >> $GITHUB_OUTPUT
 
   deploy:
-    name: Deploy to ECS
+    name: Deploy to existing ECS service
     runs-on: ubuntu-latest
     needs: build-and-push
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/staging'
-    defaults:
-      run:
-        working-directory: fintrax-app
+
+    env:
+      # 🔧 set these to your real names (no need for per-env if you run one service)
+      ECS_CLUSTER: fintrax-dev
+      ECS_SERVICE: fintrax-dev-svc
+      CONTAINER_NAME: fintrax
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -166,29 +166,74 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Deploy to ECS Fargate
-        env:
-          ENVIRONMENT: ${{ needs.build-and-push.outputs.environment }}
-          IMAGE_URI: ${{ needs.build-and-push.outputs.image-uri }}
-        run: |
-          echo "🚀 Deploying to $ENVIRONMENT environment"
-          echo "📦 Image URI: $IMAGE_URI"
-          
-          # Run deployment script
-          ./infrastructure/deploy.sh $ENVIRONMENT $IMAGE_URI
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
 
-      - name: Get deployment URL
-        env:
-          ENVIRONMENT: ${{ needs.build-and-push.outputs.environment }}
+      - name: Determine image to deploy (prefer unique tag)
+        id: image
         run: |
-          STACK_NAME="fintr-$ENVIRONMENT"
-          LB_DNS=$(aws cloudformation describe-stacks \
-            --stack-name "$STACK_NAME" \
-            --query 'Stacks[0].Outputs[?OutputKey==`LoadBalancerDNS`].OutputValue' \
-            --output text)
-          
-          echo "🌐 Application deployed to: http://$LB_DNS"
-          echo "### 🚀 Deployment Successful!" >> $GITHUB_STEP_SUMMARY
-          echo "**Environment:** $ENVIRONMENT" >> $GITHUB_STEP_SUMMARY
-          echo "**Application URL:** http://$LB_DNS" >> $GITHUB_STEP_SUMMARY
-          echo "**Image:** ${{ needs.build-and-push.outputs.image-uri }}" >> $GITHUB_STEP_SUMMARY
+          echo "uri=${{ needs.build-and-push.outputs.image-uri }}" >> $GITHUB_OUTPUT
+          echo "digest=${{ needs.build-and-push.outputs.image-digest }}" >> $GITHUB_OUTPUT
+
+      - name: Fetch current task definition ARN
+        id: current-td
+        run: |
+          TD_ARN=$(aws ecs describe-services \
+            --cluster "${ECS_CLUSTER}" \
+            --services "${ECS_SERVICE}" \
+            --query 'services[0].taskDefinition' --output text)
+          echo "arn=$TD_ARN" >> $GITHUB_OUTPUT
+
+      - name: Download and rewrite task definition with new image
+        env:
+          TD_ARN: ${{ steps.current-td.outputs.arn }}
+          IMAGE_URI: ${{ steps.image.outputs.uri }}
+          CONTAINER_NAME: ${{ env.CONTAINER_NAME }}
+        run: |
+          aws ecs describe-task-definition --task-definition "$TD_ARN" > td.json
+
+          # strip read-only fields and swap the image on target container
+          jq '
+            .taskDefinition
+            | del(
+                .taskDefinitionArn,
+                .revision,
+                .status,
+                .requiresAttributes,
+                .registeredAt,
+                .registeredBy,
+                .deregisteredAt,
+                .compatibilities,
+                .inferenceAccelerators?,
+                .pidMode?, .ipcMode?
+              )
+            | .containerDefinitions |=
+                (map(if .name == env.CONTAINER_NAME
+                     then .image = env.IMAGE_URI
+                     else . end))
+          ' td.json > new-td.json
+
+          echo "Preview:"
+          jq '.family, (.containerDefinitions[] | {name,image})' new-td.json
+
+      - name: Register new task definition revision
+        id: register
+        run: |
+          OUT=$(aws ecs register-task-definition --cli-input-json file://new-td.json)
+          NEW_TD_ARN=$(echo "$OUT" | jq -r '.taskDefinition.taskDefinitionArn')
+          echo "arn=$NEW_TD_ARN" >> $GITHUB_OUTPUT
+
+      - name: Update service and force new deployment
+        run: |
+          aws ecs update-service \
+            --cluster "${ECS_CLUSTER}" \
+            --service "${ECS_SERVICE}" \
+            --task-definition "${{ steps.register.outputs.arn }}" \
+            --force-new-deployment
+
+      - name: Summarize
+        run: |
+          echo "### 🚀 ECS Deployment Triggered" >> $GITHUB_STEP_SUMMARY
+          echo "**Cluster:** ${ECS_CLUSTER}" >> $GITHUB_STEP_SUMMARY
+          echo "**Service:** ${ECS_SERVICE}" >> $GITHUB_STEP_SUMMARY
+          echo "**Image:** ${{ steps.image.outputs.uri }}" >> $GITHUB_STEP_SUMMARY
