--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -138,9 +138,17 @@ jobs:
         env:
           IMAGE_TAG: ${{ steps.set-env.outputs.tag }}
         run: |
-          # Build and push Docker image to existing ECR registry
+          # Build and push Docker image to existing ECR registry with build args
           IMAGE_URI=$ECR_REPOSITORY:$IMAGE_TAG
-          docker build -f Dockerfile -t $IMAGE_URI .
+          docker build -f Dockerfile -t $IMAGE_URI \
+            --build-arg NEXT_PUBLIC_APP_URL="${{ secrets.NEXT_PUBLIC_APP_URL }}" \
+            --build-arg NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}" \
+            --build-arg NEXT_PUBLIC_CLERK_SIGN_IN_URL="/sign-in" \
+            --build-arg NEXT_PUBLIC_CLERK_SIGN_UP_URL="/sign-up" \
+            --build-arg DATABASE_URL="${{ secrets.DATABASE_URL }}" \
+            --build-arg CLERK_SECRET_KEY="${{ secrets.CLERK_SECRET_KEY }}" \
+            --build-arg CLERK_PUBLISHABLE_KEY="${{ secrets.CLERK_PUBLISHABLE_KEY }}" \
+            .
           docker push $IMAGE_URI
           
           echo "Image pushed to $IMAGE_URI"
