--- a/fintrax-app/Dockerfile
+++ b/fintrax-app/Dockerfile
@@ -38,4 +38,5 @@ RUN npm run build
 EXPOSE 3000
 
 # Start the application
-CMD ["npm", "start"]
+CMD ["npm", "run", "dev"]
+# CMD ["node", ".next/standalone/server.js"]
