fix: update test command to include coverage and change CMD to start application in Dockerfile

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Run tests (if available)
         run: |
           if npm run | grep -q "test"; then
-            npm test
+            npm test --coverage
           else
             echo "No tests configured"
           fi
